--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,16 @@ edition = "2024"
 
 [workspace.dependencies]
 axum = "0.7"
-sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
+tokio = { version = "1", features = ["full"] }
+sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono", "bigdecimal"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+dotenvy = "0.15"
+uuid = { version = "1", features = ["v4", "serde"] }
+chrono = { version = "0.4", features = ["serde"] }
+validator = { version = "0.16", features = ["derive"] }
+argon2 = "0.5"
+jsonwebtoken = "9"
+utoipa = "4"
+utoipa-swagger-ui = "5"
+tower-http = { version = "0.5", features = ["trace", "limit"] }
